# esphome-client

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  build.rs  clippy.toml  release-please-config.json
.github/: CODEOWNERS
.github/release-please/: .gitignore
.github/workflows/: check-esphome-api.yml  ci.yml  release-please.yml
esphome-client-proto-builder/: Cargo.toml  README.md
esphome-client-proto-builder/src/: main.rs
examples/: README.md  device_discovery.rs  list_all_entities.rs  noise_connection.rs  plain_connection.rs  sensor_monitoring.rs  switch_control.rs
src/: client.rs  discovery.rs  error.rs  lib.rs  proto.rs
src/client/: noise.rs  plain.rs  stream_reader.rs  stream_writer.rs
src/proto/: README.md  api.rs  proto_loader.rs
src/proto/1.13/: api_options.proto
src/proto/api_1_10/: api.proto  mod.rs
src/proto/api_1_12/: api.proto  api_options.proto  mod.rs
src/proto/api_1_13/: api.proto  mod.rs
src/proto/api_1_14/: api.proto  api_options.proto  mod.rs
src/proto/api_1_8/: api.proto  mod.rs
src/proto/api_1_9/: api.proto  mod.rs
tests/: noise.rs  plain.rs
